<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivityAdministrator">



    <FrameLayout
        android:id="@+id/frameEncabezado"
        android:layout_width="412dp"
        android:layout_height="136dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="139dp"
        android:background="?android:attr/colorPressedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/tuparqueologo" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtAdministrador"
        android:layout_width="204dp"
        android:layout_height="39dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/txtAdministrador"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="291dp"
        android:layout_height="233dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAdministrador"
        app:layout_constraintVertical_bias="0.242">

        <Button
            android:id="@+id/btnParqueadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="parqueadero"
            android:text="@string/btnParqueadero"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/btnEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="empleado"
            android:text="@string/btnEmpleado"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/btnPlanTarifa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="planes"
            android:text="@string/btnPlanTarifa"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/btnZona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="zona"
            android:text="@string/btnZona"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:onClick="salir"
        android:text="@string/btnSalir"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.46" />


</androidx.constraintlayout.widget.ConstraintLayout>