<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivityEmpleado">


    <FrameLayout
        android:id="@+id/frameEncabezado"
        android:layout_width="412dp"
        android:layout_height="136dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="139dp"
        android:background="?android:attr/colorPressedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/tuparqueologo" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtRegEmpleado"
        android:layout_width="283dp"
        android:layout_height="31dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/txtRegEmpleado"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:onClick="cancelar"
        android:text="@string/btnCancelar"
        android:textColor="#81D4FA"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:onClick="registrar"
        android:text="@string/btnGuardar"
        android:textColor="#81D4FA"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="454dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameEncabezado"
        app:layout_constraintVertical_bias="0.319">

        <TextView
            android:id="@+id/txtCedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtCedula" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="."
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtNombre" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtApellido" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtCargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtCargo" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtDireccion" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtTelefono" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="phone"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtCorreo" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>