<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivityParqueadero">

    <TextView
        android:id="@+id/txtDatoParqueadero"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_dark"
        android:text="DATOS PARQUEADERO"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <FrameLayout
        android:id="@+id/frameEncabezado"
        android:layout_width="412dp"
        android:layout_height="136dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="139dp"
        android:background="?android:attr/colorPressedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/tuparqueologo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="349dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameEncabezado"
        app:layout_constraintVertical_bias="0.369">

        <TextView
            android:id="@+id/txtIdentificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="Nit"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxNit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtParqueadero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtParqueadero"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxParqueadero"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="."
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtDirParqueadero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtDireccion"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxDirParqueadero"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtTelParqueadero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtTelefono"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxTelParqueadero"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="phone" />

        <TextView
            android:id="@+id/txtCorreoParqueadero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/txtCorreo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxCorreoParqueadero"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="-"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegParque"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="68dp"
        android:text="@string/btnGuardar"
        android:textColor="#81D4FA"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConsulParque"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="68dp"
        android:text="@string/btnConsultar"
        android:textColor="#81D4FA"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnEditParque"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnEditar"
        android:textColor="#81D4FA"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnElimParque"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnEliminar"
        android:textColor="#81D4FA"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>